# duckdb-inet

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: html_entity_lookup.c  html_unescape.c  html_unescape.h  inet_escape_functions.cpp  inet_extension.c  inet_extension.cpp  inet_extension_old.cpp  inet_functions.cpp  inet_html.c  inet_html.cpp  inet_html.h  inet_html_table.c  inet_html_table.cpp  inet_html_table.h  inet_html_table.hpp  inet_ipaddress.c  inet_ipaddress.cpp  inet_ipaddress.h  inet_ipaddress.hpp  ip_address.c  ip_address.h  make_html_lut.py
src/duckdb/stable/: cast_function.hpp  common.hpp  data_chunk.hpp  exception.hpp  executor.hpp  executor_types.hpp  extension_loader.hpp  format.hpp  hugeint.hpp  logical_type.hpp  scalar_function.hpp  string_type.hpp  string_util.hpp  uhugeint.hpp  vector.hpp
src/include/: inet_extension.hpp
test/sql/inet/: test_inet_functions.test  test_inet_type.test  test_ipv6_inet_nested.test  test_ipv6_inet_storage.test
